# Python_Piscine

./: README.md  es.README.md
Module00/: README.md  es.README.md
Module00/ex0/: ft_hello_garden.py
Module00/ex1/: ft_plot_area.py
Module00/ex2/: ft_harvest_total.py
Module00/ex3/: ft_plant_age.py
Module00/ex4/: ft_water_reminder.py
Module00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module00/ex6/: ft_garden_summary.py
Module00/ex7/: ft_seed_inventory.py
Module01/: README.md  es.README.md
Module01/ex0/: ft_garden_intro.py
Module01/ex1/: ft_garden_data.py
Module01/ex2/: ft_plant_growth.py
Module01/ex3/: ft_plant_factory.py
Module01/ex4/: ft_garden_security.py
Module01/ex5/: ft_plant_types.py
Module01/ex6/: ft_garden_analytics.py
Module02/: README.md  es.README.md
Module02/ex0/: ft_first_exception.py
Module02/ex1/: ft_different_errors.py
Module02/ex2/: ft_custom_errors.py
Module02/ex3/: ft_finally_block.py
Module02/ex4/: ft_raise_errors.py
Module02/ex5/: ft_garden_management.py
Module03/: README.md  es.README.md
Module03/ex0/: ft_command_quest.py
Module03/ex1/: ft_score_analytics.py
Module04/: README.md  es.README.md
Module05/: README.md  es.README.md
Module05/ex1/: data_stream.py
Module06/: README.md  es.README.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Module07/: README.md  es.README.md
Module08/: README.md  es.README.md
Module08/ex1/: loading.py  pyproject.toml
Module09/: README.md  es.README.md
Module10/: README.md  es.README.md
(+53 files in other folders)
