[tool.poetry]
name = 'ex1'
version = '0.1.0'
description = 'Matrix data loading program'
authors = ['Skade <skade@email.com>']
package-mode = false

[tool.poetry.dependencies]
python = '^3.12'
pandas = '*'
requests = '*'
matplotlib = '*'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
